objects/SearchFIPS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SearchFIPS</label>
</CustomObject>